test/classes/initializers/records/generics/bug-14945.good
bug-14945.chpl:8: error: initializer produces a different type
bug-14945.chpl:8: note: when default-initializing 'foo1' of type 'Foo(bool)'
bug-14945.chpl:8: note: init resulted in type 'Foo(int(64))'
